objects/ssot__ServiceProcessDefinition__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssociatedRecordId__c</fullName>
        <label>Associated Record</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Associated Record</masterLabel>
            <refAttrDeveloperName>AssociatedRecordId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssociatedRecordObject__c</fullName>
        <label>Associated Record Object</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Associated Record Object</masterLabel>
            <refAttrDeveloperName>AssociatedRecordObject</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Created Date</masterLabel>
            <refAttrDeveloperName>CreatedDate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Data Source</masterLabel>
            <refAttrDeveloperName>DataSourceId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Data Source Object</masterLabel>
            <refAttrDeveloperName>DataSourceObjectId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Description</masterLabel>
            <refAttrDeveloperName>Description</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FlowId__c</fullName>
        <label>Flow</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Flow</masterLabel>
            <refAttrDeveloperName>FlowId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Service Process Definition Id</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Service Process Definition Id</masterLabel>
            <primaryIndexOrder>1</primaryIndexOrder>
            <refAttrDeveloperName>Id</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>System</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Internal Organization</masterLabel>
            <refAttrDeveloperName>InternalOrganizationId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <label>Is Active</label>
        <length>5</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Is Active</masterLabel>
            <refAttrDeveloperName>IsActive</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsFeatured__c</fullName>
        <label>Is Featured</label>
        <length>5</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Is Featured</masterLabel>
            <refAttrDeveloperName>IsFeatured</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LabelName__c</fullName>
        <label>Label Name</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Label Name</masterLabel>
            <refAttrDeveloperName>LabelName</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Name</masterLabel>
            <refAttrDeveloperName>Name</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceProcessStatus__c</fullName>
        <label>Service Process Status</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Service Process Status</masterLabel>
            <refAttrDeveloperName>ServiceProcessStatus</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009518035_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ServiceProcessDefinition_FlowId_map__rel</label>
        <referenceTo>ssot__Flow__dlm</referenceTo>
        <relationshipLabel>ServiceProcessDefinition_FlowId_map__rel</relationshipLabel>
        <relationshipName>rel_1702009518035_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009519850_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ServiceProcessDefinition_AssociatedR_rel</label>
        <referenceTo>ssot__Campaign__dlm</referenceTo>
        <relationshipLabel>ServiceProcessDefinition_AssociatedR_rel</relationshipLabel>
        <relationshipName>rel_1702009519850_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <masterLabel>Service Process Definition</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Business Process</referenceEntityGroup>
        <referenceEntityName>ServiceProcessDefinition</referenceEntityName>
        <referenceEntitySubjectArea>Business Process</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>